[gd_scene load_steps=8 format=3 uid="uid://c6ghxmw38r60"]

[ext_resource type="Script" path="res://scenes/start_menu.gd" id="1_6j3rw"]
[ext_resource type="VideoStream" path="res://assets/UI/video/Menu_video.ogv" id="2_4av8l"]
[ext_resource type="Texture2D" uid="uid://dhtljkresqg51" path="res://assets/UI/video/prototype_title_2.png" id="3_35mqc"]
[ext_resource type="AudioStream" uid="uid://d1givqgarpvb8" path="res://assets/sounds/Lite Saturation - Fantastic Magically Orchestra.mp3" id="4_3ine6"]
[ext_resource type="FontFile" uid="uid://cti0vlwxxfed1" path="res://assets/UI/font/Piratte Diarys.otf" id="4_sb8dk"]
[ext_resource type="PackedScene" uid="uid://m47064cxfa3k" path="res://scenes/transitions.tscn" id="6_1c3mv"]

[sub_resource type="CanvasTexture" id="CanvasTexture_k55l4"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6j3rw")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_4av8l")
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1147.0
offset_top = 54.0
offset_right = 1888.0
offset_bottom = 298.0
texture = ExtResource("3_35mqc")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 625.0
offset_top = 115.0
offset_right = 625.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_sb8dk")
theme_override_font_sizes/font_size = 50
text = "New Game"
flat = true

[node name="Load" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_sb8dk")
theme_override_font_sizes/font_size = 50
text = "Load"
flat = true

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_sb8dk")
theme_override_font_sizes/font_size = 50
text = "Options"
flat = true

[node name="CGGallery" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_sb8dk")
theme_override_font_sizes/font_size = 50
text = "CG Gallery"
flat = true

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_sb8dk")
theme_override_font_sizes/font_size = 50
text = "Quit"
flat = true

[node name="Transitions" parent="." instance=ExtResource("6_1c3mv")]
visible = false
layout_mode = 1

[node name="FadeOutTrans" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("CanvasTexture_k55l4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3ine6")
autoplay = true
bus = &"Music"

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CGGallery" to="." method="_on_cg_gallery_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
